[gd_scene load_steps=2 format=3 uid="uid://bl0elka8h0xej"]

[ext_resource type="Script" path="res://Scripts/test_scene.gd" id="1_sgreu"]

[node name="Test_Scene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sgreu")

[node name="Host" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -15.5
offset_right = 22.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Host
"

[node name="Join" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = 28.5
offset_right = 22.0
offset_bottom = 59.5
grow_horizontal = 2
grow_vertical = 2
text = "Join"

[node name="Message" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = 76.5
offset_right = 22.0
offset_bottom = 107.5
grow_horizontal = 2
grow_vertical = 2
text = "Message"

[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Message" to="." method="_on_message_pressed"]
